style.css
/* ... */
/* Thin bar on scroll */
.thin-bar .site-logo-housing {
    background-color: black;
    width: 100%;
    color: white;
    border: none;
    height: 50px;
    z-index: 1000;
}
.thin-bar .site-title {
    text-align: left;
    font-size: 1em;
    margin-top: 18px;
    margin-left: 1.25em;
}
.thin-bar .site-title a {
    color: white;
}
.thin-bar .site-description {
    display: none;
}
@media screen and (max-width: 300px) {
    .site-description,
    .thin-bar .site-logo {
        display: none!important;
    }
    .thin-bar .with-icon {
        margin-left: 0!important;
    } 
}

@media screen and (max-width: 400px) {
    .site-logo {
        display: none;
    }
    .thin-bar .site-logo {
        display: block;
    }
}
@media screen and (max-width: 30em) {
    .site-title {
        font-size: 1.4em;
    }
    .site-logo {
        width: 4em;
        padding: 5px;
        top: 1em;
    }
}

@media screen and (min-width: 40em) {
    #social-links-division {
        display: block!important;
        position: fixed;
        bottom: 0!important;
        right: 0;
        background: white;
        padding: 1em;
        width: auto;
        height: 60px;
    }
}

@media screen and (min-width: 50em) {
    .top-bar {
        /*border-color: transparent;*/
    }
    .top-bar.thin-bar {
        /*height: 48px;*/
    }
    .site-branding {
        margin-top: 10px;
        padding-left: 1.9375em;
        padding-right: 1.9375em;
    }
    .thin-bar .site-branding {
        margin-top: 0;
    }
    .site-logo {
        left: 50%;
        margin-left: -4.5em;
        width: 9em;
        top: 10px;
    }
    .site-logo-shadow {
        top: 11px;
    }
    .site-logo-housing {
        height: 140px;
    }
    .thin-bar .site-logo {
        width: 3.5em;
        left: 50%;
        margin-left: -1.75em;
    }
    .site-title {
        text-align: left;
        font-size: 1.6rem;
        margin-top: 1.4em;
    }
    .thin-bar .site-title {
        font-size: 1.2em;
        margin-left: 0;
    }
    .site-description {
        text-align: right;
        position: relative;
        top: -1.5em;
        float: right;
        max-width: 50%;
    }
    .thin-bar .top-bar-title {
        margin-left: 0;
    }
    .site-header-image {
        padding-top: 140px;
    }
    #primary-nav-bar {
        /*position: relative;*/
        z-index: 1!important;
        height: 45px;
         top: 92px; 
        /*border-bottom: 3px solid transparent;*/
        /*border-top: 1px solid gainsboro;*/
        margin-left: -1em;
        width: calc(100% + 2em);
        transition: all 300ms ease;
        /*overflow: hidden;*/
        padding: 0 0.9375em;
    }
    .thin-bar #primary-nav-bar {
        /*display: none;*/
        /*border-bottom: none;*/
        top: 50px;
    }
    .thin-bar #primary-nav-bar.hide {
        top: 0px;
        display: block!important;
    }
    
    .main-navigation .nav-menu li {
        line-height: 1em;
    }
    .full-navigation-menu {
        display: none!important;
        background: #dcdcdc;
        height: 45px;
        overflow-y: hidden;
    }
    .full-navigation-menu ul {
        padding: 0 1.9375em!important;
    }
    .full-navigation-menu li {
        display: inline-block;
        margin-right: 2.5%;
        line-height: 1;
    }
    .full-navigation-menu li a {
        color: #777;
    }
    .full-navigation-menu li a:hover,
    .full-navigation-menu li a:focus {
        color: black;
    }
    .split-navigation-menu {
        display: block!important;
        background: #dcdcdc;
        height: 45px;
        padding-left: 1em;
        padding-right: 1em;
    }
    #social-links-division {
        display: block!important;
        position: absolute!important;
        right: 60px!important;
        top: 0;
        background: transparent;
        width: auto;
        margin: 0;
        border: 1px solid gainsboro;
        border-top: none;
        border-radius: 0 0 0 5px;
        padding: 5px 10px;
        height: 38px;
    }
    /*#social-links-division a:after {
        color: gainsboro;
    }
    .thin-bar #social-links-division {
        right: 2.5em;
    }*/
    #main-nav-division {
        width: 100%;
        left: 0;
        /* bottom: 86px; */
    }
    .thin-bar #main-nav-division {
        /* bottom: 31px; */
    }
}
@media screen and (min-width: 64em) {
    .site-logo-shadow {
        top: 7px;
    }
    .site-logo {
        width: 10em;
        margin-left: -5em;
    }
    .thin-bar .site-logo {
        width: 4em;
        margin-left: -2em;
    }
    .thin-bar {
        height: 50px;
    }
    .thin-bar .site-title {
        font-size: 1.2em;
        margin-top: 14px;
    }
    .thin-bar .site-branding {
        /*top: 8px;*/
    }
    .thin-bar #main-nav-division {
        /* bottom: 33px; */ 
    }
}
@media screen and (min-width: 75em) {
    #site-search-container {
        padding: 1.5em calc((100vw - 82.5em) / 2);
    }
    .top-bar {
        padding: 0 calc((100vw - 82.5em) / 2);
    }
    .site-logo-housing
    {
        padding: 0 calc((100vw - 84.5em) / 2);
    }
    #social-links-division {
        position: relative!important;
    }
}
@media screen and (min-width: 82.5em) {
    .site-branding {
        padding-left: 1em;
        padding-right: 1em;
    }
    .search-toggle {
        position: relative!important;
        margin-left: 67.75em;
        right: blah; /* Incorrect value to "reset" right and make it fit properly */
    }
    .search-toggle i {
        position: absolute;
        right: 8px;
        top: 10px;
    }
    .split-navigation-menu {
        padding: 0 calc((100vw - 80.5em) / 2);
    }
    .full-navigation-menu ul {
        padding: 0 1em!important;
    }
    #social-links-division {
        right: 46px!important;
    }
}
/* ... */

